--- a/css/styles.css
+++ b/css/styles.css
@@ -114,9 +114,9 @@ span.nombre:hover {
     background-position: center center;
     height: calc(100vh - 100px);
 
-   /*  display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
 }
 
 .presentacion {
@@ -259,10 +259,14 @@ p.copying {
 /* medias query */
 @media (max-width: 952px){
     .enlace{
-        padding-left: 20px;
+        padding-left: 16px;
         order: 1;
     }
 
+    .nombre {
+        font-size: 18px;
+    }
+    
     nav ul li a{
         font-size: 16px;
     }
@@ -277,12 +281,14 @@ p.copying {
     ul{
         position: fixed;
         width: 100%;
-        height: 100vh;
+        /* height: 100vh; */
+        height: 60vh;
         background: #2c3e50;
         top: 80px;
         left: -100%;
         text-align: center;
         transition: all .5s;
+        overflow: scroll;
     }
 
     nav ul li{
