--- a/css/styles.css
+++ b/css/styles.css
@@ -31,20 +31,21 @@ nav.abajo {
 
 .enlace {
     position: absolute;
-    padding: 20px 50px;
+    padding: 6px 50px 20px;
     display: flex;
     align-items: center;
 }
 
 .logo {
-    height: 44px;
+    height: 60px;
     border-radius: 4px;
     margin-right: 20px;
     transition: 1s;
 }
 
 .main-name {
-    color: white;
+    color: rgb(184, 137, 250);
+    font-weight: bold; /* negrita */
     font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
@@ -136,7 +137,8 @@ span.nombre:hover {
     margin-bottom: 10px;
     text-shadow: 6px 4px #070707;
 }
-  
+
+
 .presentacion p {
     color: white;
     font-size: 40px;
@@ -309,20 +311,6 @@ textarea {
     color: #FF4081;
     transition: 0.4s;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* ******* Footer ****** */
