animacion en el nevbar y cambio de fondo

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Great Vibes&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kalam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
 
 * {
     padding: 0;
@@ -10,8 +9,8 @@
 }
 
 nav {
-    position:fixed;
-    background: #2fcdcd;
+    position: fixed;
+    background: #261833;
     
     top: 0;
     left: 0;
@@ -25,7 +24,7 @@ nav {
 }
 
 nav.abajo {
-    background: rgba(2, 136, 136, 0.8);
+    background: rgba(38, 24, 51, 0.6);
     padding: 12px 20px;
 }
 
@@ -44,13 +43,13 @@ nav.abajo {
 }
 
 .main-name {
-    color: rgb(184, 137, 250);
+    color: white;
     font-weight: bold; /* negrita */
     font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
-    transition: 0.5s
-}
+    transition: 0.5s;
+} 
 
 nav ul {
     float: right;
@@ -64,16 +63,38 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    position: relative;
+    color: #a0a0a0;
     font-size: 18px;
-    padding: 7px 13px;
+    /* padding: 7px 13px; */
     border-radius: 5px;
     text-transform: uppercase;
+
+    /* letter-spacing: 0.5px */;
+    padding: 0 12px;
+}
+
+/* nuevo */
+li a:after {
+    content: "";
+    position: absolute;
+    background-color: #ff3c78;
+    height: 4px;
+    width: 0;
+    left: 0;
+    bottom: -10px;
+    transition: 0.3s;
 }
 
 li a:hover {
-    background: rgb(156, 156, 157, 0.6);
-    transition: 0.5s;
+    /* background: rgb(156, 156, 157, 0.6); */
+    /* transition: 0.5s; */
+
+    color: #ffffff;
+}
+
+li a:hover:after {
+    width: 100%;
 }
 
 .checkbtn {
@@ -92,12 +113,12 @@ li a:hover {
 
 nav.abajo .main-name,
 nav.abajo ul li a {
-    color: yellow;
+    color: white;
 }
 
 nav.abajo .logo,
 nav.abajo ul li a:hover {
-    color:blue;
+    color:yellow;
 }
 
 img.logo:hover {
@@ -116,7 +137,7 @@ span.nombre:hover {
 /* **** Zona central de la primer pagina **** */ 
 #zona1{
     margin-top: 100px;
-    background: url(../img/fondo5.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
+    background: url(../img/fondo19.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
     background-size: cover;
     background-position: center center;
     height: calc(100vh - 100px);
@@ -152,8 +173,10 @@ span.nombre:hover {
 }
 
 .presentacion p {
-    color: rgb(245, 241, 3);
-    font-size: 40px;
+    /* font-family: 'Montserrat', sans-serif; */
+    color: white;
+    font-weight: 600;
+    font-size: 46px;
     margin-bottom: 5px;
 }
 
