--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,12 @@
 
 nav {
     position: fixed;
-    background: #261833;
-    
+    /* background: #261833;  no me hace falta el color de fondo del navbar  */
     top: 0;
     left: 0;
-
     justify-content: space-arround;
     transition: 0.7s;
     padding: 16px 10px;
-
     height: 100px;
     width: 100%;
 }
@@ -136,12 +133,15 @@ span.nombre:hover {
 
 /* **** Zona central de la primer pagina **** */ 
 #zona1{
-    margin-top: 100px;
+    /* margin-top: 100px; */  /* la imagen enpesara luego del alto del navbar que tiene tambien 100px */
     background: url(../img/fondo19.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
     background-size: cover;
     background-position: center center;
     height: calc(100vh - 100px);
 
+    /* nuevo */
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -163,6 +163,7 @@ span.nombre:hover {
     animation-timing-function: linear;
 }
 
+/* **** Fotograma de LA INFORMATICA **** */
 @keyframes slide-in {
     from {
         transform: translateX(190%);
@@ -179,7 +180,6 @@ span.nombre:hover {
     font-size: 46px;
     margin-bottom: 5px;
 }
-
 
 /* ******** Datos sobre mi ******** */
 #sobremi {
@@ -223,47 +223,53 @@ section h2 {   /* todos los h2 */
     text-align: center;
     color: blue;
 }
-  
-#proyectos{
-    background-color: #e6d3ba;
-    padding: 50px 0;
-}
 
-.proyect {
-    /* padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+/* *********** Proyecto ******** */
+.card-container {
     display: flex;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
-}
-  
-.proyect img {
-    height: 40vh;
-    width: 40%;  /* la imagen ocupa el 40% de la fila */
-    border-radius: 10px;
-    margin-right: 20px;   /* Espaciado entre la imagen y el texto (ajusta según sea necesario) */
+    margin: 100px;
 }
 
-.proyect-content {
-    flex: 1; /* ocupa todo el espacion restante de la fila */
+.card {
+    width: 500px;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+    margin: 20px;
 }
 
-/* Añadir márgenes o estilos adicionales según sea necesario */
-.proyect h3 {
-    font-size: 1.5rem;
-    margin-bottom: 10px;
+.card img {
+    width: 100%;
+    height: auto;
 }
 
-.proyect p {
-    font-size: 1rem;
-    color: #555;
+.card-content {
+    padding: 16px;
 }
 
+.card-content h3 {
+    font-size: 28px;
+    margin-bottom: 8px;
+}
+
+.card-content p {
+    color: #666;
+    font-size: 15 px;
+    line-height: 1.3;
+}
+
+.card-content .btn {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #333;
+    text-decoration: none;
+    border-radius: 4px;
+    margin-top: 16px;
+    color: #ffffff;
+}
 
 /* ********************************* */
 /* Texto de formulario */
@@ -276,7 +282,7 @@ section h2 {   /* todos los h2 */
 /* Estilos para centrar el formulario en el medio del contenedor */
 #section-form {
     max-width: 100%;
-    background-image: url(../img/NewSoft.png);
+    background-image: url(../img/fondoformpc.jpg);
     background-size: 100vw 100vh;
     background-attachment: fixed;   /* para que la imagen quede fija en el fondo */
     padding-bottom: 16px;
@@ -399,6 +405,7 @@ p.copying {
     color:rgb(119, 194, 109)
 }
 
+
 /* **** Meedia Query **** */
 /* medias query */
 @media (max-width: 952px){
@@ -415,7 +422,6 @@ p.copying {
         font-size: 16px;
     }
 }
-
 
 @media (max-width: 858px){
     .checkbtn{
