--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ span.nombre:hover {
     animation-timing-function: linear;
 }
 
-/* **** Fotograma de LA INFORMATICA **** */
+/* **** Fotograma de LA INFORMATICA, presentacion h1 **** */
 @keyframes slide-in {
     from {
         transform: translateX(190%);
