--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,6 @@ li a:after {
 li a:hover {
     /* background: rgb(156, 156, 157, 0.6); */
     /* transition: 0.5s; */
-
     color: #ffffff;
 }
 
@@ -112,11 +111,11 @@ li a:hover:after {
 }
 
 .checkbtn {
-    font-size: 30px;
+    font-size: 34px;
     color: white;
     float: right;
     line-height: 80px;
-    margin-right: 40px;
+    margin-right: 20px;
     cursor: pointer;
     display: none;
 }
@@ -136,7 +135,7 @@ nav.abajo ul li a:hover {
 }
 
 img.logo:hover {
-    transform: scale(1.4);
+    transform: scale(1.2);
     rotate: 360deg;
 }
 
@@ -301,6 +300,7 @@ section h2 {   /* todos los h2 */
 /* *********** Card de los proyectos ******** */
 #container-proyectos {
     background-color: #e9dae9;
+    padding-bottom: 30px;
 }
 
 #container-proyectos h2 {
@@ -308,56 +308,87 @@ section h2 {   /* todos los h2 */
 }
 
 .card-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    /* margin: 100px; */
-    padding: 40px;
+    min-height: 100vh;
+    width: 80%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns:
+        repeat(auto-fit, minmax(min(450px, 100%), 1fr));
+    gap: 2.2em;
 }
 
 .card {
-    width: 500px;
-    height: 500px;
-    background-color: #f0f0f0;
+    display: grid;
+    grid-template-rows: 50% 10% 30% 10%;
     border-radius: 8px;
-    overflow: hidden;
     box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
-    margin: 20px;
-}
-
-.card img {
+    background-color: #f0f0f0;
     width: 100%;
-    /* height: auto; */
-    /* lo nuevo */
-    height: 60%;
+    height: 500px;
+    object-fit: cover;
+    overflow: hidden;
 }
 
-.card-content {
-    padding: 16px;
-    /* lo nuevo */
+.card-img {
+    grid-row: 1 / 2; /* Imagen ocupa la primera fila */
+}
+
+.card-img img {
     width: 100%;
-    height: 50%;
+    height: 100%;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
 }
 
-.card-content h3 {
+.card-title {
+    grid-row: 2 / 3; /* Título ocupa la segunda fila */
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+}
+
+.card-title h3 {
     font-size: 28px;
-    margin-bottom: 8px;
+    margin: 0;
 }
 
-.card-content p {
+.card-description {
+    grid-row: 3 / 4; /* Descripción ocupa la tercera fila */
+    margin: 0 16px;
+    display: flex;
+    align-items: center;
+    overflow-y: scroll; /* Hacer que el contenido desbordado sea desplazable verticalmente */
+    max-height: 100%; /* Asegurar que no crezca más allá del contenedor */
+}
+
+.card-description p {
     color: #666;
-    font-size: 15px;
-    line-height: 1.3;
+    font-size: 19px;
+    line-height: 1.2;
 }
 
-.card-content .btn {
-    display: inline-block;
+.card-btns {
+    grid-row: 4 / 5; /* Botones ocupan la cuarta fila */
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px; /* Espacio entre los botones */
+}
+
+.card-btns .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 8px 16px;
     background-color: #333;
     text-decoration: none;
     border-radius: 4px;
-    margin-top: 16px;
     color: #ffffff;
+    flex: 1;
+    text-align: center;
+    min-width: 100px;   /* podria poner auto, si se requiere */
 }
 
 /* ********************************* */
@@ -365,7 +396,7 @@ section h2 {   /* todos los h2 */
 /* Estilos para centrar el formulario en el medio del contenedor */
 #section-form {
     max-width: 100%;
-    background-image: url(/img/fondoform.png);
+    background-image: url(/img/portada.png);
     background-size: 100vw 100vh;
     background-attachment: fixed;   /* para que la imagen quede fija en el fondo */
     padding-bottom: 16px;
@@ -374,17 +405,16 @@ section h2 {   /* todos los h2 */
 .titulo-form {
     text-align: center;
     font-size: 2em;
-    padding: 160px 3px 2px 3px;
+    padding: 162px 3px 2px 3px;
     margin: 0;
     color: white;
-    text-shadow: #FF4081 2px 2px;
+    text-shadow: #ff4081 2px 2px;
 }
 
 form {
-    /*width: 760px;*/
     max-width: 40%;
     margin: auto;
-    background: rgba(0, 0, 0, 0.3);
+    background-color: rgba(9, 72, 110, 0.5);
     padding: 20px 20px 10px 20px;
     box-sizing: border-box;
     margin-top: 20px;
@@ -451,7 +481,7 @@ textarea {
     transition: 0.4s;
 }
 
-
+/*************************/
 /* ******* Footer ****** */
 footer {
     background-color: #333;
@@ -562,17 +592,78 @@ p.copying {
         left:0;
     }
 
+    .presentacion h1 {
+        font-size: 4rem;
+        /* fotograma */
+        animation: slide-in 20s infinite;
+        animation-timing-function: linear;
+    }
+    
+    /* **** Fotograma de LA INFORMATICA, presentacion h1 **** */
+    @keyframes slide-in {
+        from {
+            transform: translateX(150%);
+        }
+        to {
+            transform: translateX(-120%);
+        }
+    }
+    
+    .presentacion p {
+        color: white;
+        font-weight: 400;
+        font-size: 38px;
+    }
+
     form {
         max-width: 60%;
     }
 }
 
 @media (max-width: 490px) {
+    .presentacion h1 {
+        font-size: 3rem;
+        /* fotograma */
+        animation: slide-in 18s infinite;
+        animation-timing-function: linear;
+    }
+    
+    /* **** Fotograma de LA INFORMATICA, presentacion h1 **** */
+    @keyframes slide-in {
+        from {
+            transform: translateX(140%);
+        }
+        to {
+            transform: translateX(-110%);
+        }
+    }
+    
+    .presentacion p {
+        color: white;
+        font-weight: 300;
+        font-size: 30px;
+    }
+
+    p.historiamia {
+        font-size: 1.8rem;
+    }
+    
+    p.actualidad {
+        font-size: 1.7rem;
+    }
+
+    .card-description p {
+        color: #666;
+        font-size: 15px;
+        line-height: 1.1;
+    }
+
     section h2,
     .titulo-form {
         font-size: 1.5em;
     }
+
     form {
-        max-width: 80%;
+        max-width: 86%;
     }
 }
