--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -130,7 +130,7 @@ span.nombre:hover {
 /**********************************************/
 /* **** Zona central de la primer pagina **** */ 
 #zona1{
-    background: url(../img/fondo19.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
+    background: url(../img/fondo11.jpg) no-repeat;   /* Es para que sea SOLO una imagen */
     background-size: cover;
     background-position: center center;
     height: calc(100vh - 100px);
@@ -143,15 +143,15 @@ span.nombre:hover {
     align-items: center;
 }
 
-.presentacion {
+.img-proyectos {
     max-width: 100%;
     text-align: center;
 }
   
-.presentacion h1 {
+.img-proyectos h1 {
     color: #FF4081;
     font-size: 5.8rem;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     text-shadow: 6px 4px #070707;
 
     /* fotograma */
@@ -162,303 +162,247 @@ span.nombre:hover {
 /* **** Fotograma de LA INFORMATICA, presentacion h1 **** */
 @keyframes slide-in {
     from {
-        transform: translateX(180%);
+        transform: translateX(150%);
     }
     to {
-        transform: translateX(-180%);
+        transform: translateX(-150%);
     }
 }
 
-.presentacion p {
-    color: white;
-    font-weight: 600;
-    font-size: 46px;
-    margin-bottom: 5px;
+
+.ol-proyectos .li-proyectos {
+    /* display: flex; */
+    line-height: 50px;
+    margin: 0 5px;
 }
 
-/* ******** Datos sobre mi ******** */
-#sobremi {
-    background-color: #fecec1;
-    padding: 120px 50px;
-    /*     text-align: center; */
-}
-
-.sobremi-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-  
-.sobremi-content img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
-
-p.historiamia {
-    font-family: "Kalam", cursive;
-    font-weight: 400;
-    font-size: 2.2rem;
-    color:rgba(46, 2, 95, 0.4);
-    padding-bottom: 15px;
-}
-
-p.actualidad {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2rem;
-    color:rgba(95, 78, 2, 0.4);
-}
-
-section h2 {   /* todos los h2 */
-    font-size: 2em;
-    margin-bottom: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    color: blue;
-}
-
-/***************************/
-/* ****** Lenguajes ****** */
-#container-slider {
-    width: 100vw;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    background-image: url(/img/fondoform2.jpg);
-    background-position: center;
-    background-size: cover;
-}
-
-#container-slider h2 {
-    padding-top: 120px;
+.ol-proyectos .li-proyectos a {
+    /* position: relative; */   /* Les anule esto, para que NO ponga el subrayado rojo */
     color: #ffffff;
+    font-size: 2em;
+    border-radius: 5px;
+    text-transform: uppercase;
+    padding: 0 12px;
 }
 
-.slider {
-    width: 75vw;
-    height: 75vh;
-    margin: 20px auto;
-    overflow: hidden;
+.ol-proyectos .li-proyectos a:hover {
+    color: #f177cd;
 }
 
-.slider .slide-track {
-    display: flex;
-    gap: 10px;
-    animation: scroll 40s linear infinite;
-    -webkit-animation: scroll 50s linear infinite;
-    width: calc(200px * 22);  /* es la cantidad de imagenes que pusimos */
-}
-
-.slider .slide {
-    width: 200px;
-    height: 200px;
-}
-
-.slider .slide img {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-}
-
-@keyframes scroll {
-    0% {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-    }
-    100% {
-        -webkit-transform: translateX(calc(-200px * 11));
-        transform: translateX(calc(-200px * 11));
-    }
-}
 
 /**********************************************/
-/* *********** Card de los proyectos ******** */
-#container-proyectos {
-    background-color: #e9dae9;
+/* *********** Seccion CONFERENCIA ********** */
+/* ---- todos los h2 de los contenedores ---- */
+.contenedor h2 {
+    display: flex;
+    justify-content: center;
+
     padding-bottom: 30px;
+    font-size: 2em;
 }
 
-#container-proyectos h2 {
+.container1 {
+    width: 100vw;
+    background-color: rgb(215, 243, 243);
     padding-top: 120px;
+    padding-bottom: 100px;
 }
 
-.card-container {
-    min-height: 100vh;
-    width: 80%;
+.card-container1 {
+    width: 90%;
     margin: 0 auto;
 
     display: grid;
     grid-template-columns:
-        repeat(auto-fit, minmax(min(450px, 100%), 1fr));
+        repeat(auto-fit, minmax(min(420px, 100%), 1fr));
     gap: 2.2em;
 }
 
-.card {
-    display: grid;
-    grid-template-rows: 50% 10% 30% 10%;
+.card1 {
+    margin: 0 auto;
     border-radius: 8px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
+    box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
     background-color: #f0f0f0;
     width: 100%;
-    height: 600px;
+    max-height: 300px;
     object-fit: cover;
     overflow: hidden;
 }
 
-.card-img {
-    grid-row: 1 / 2; /* Imagen ocupa la primera fila */
-}
-
-.card-img img {
-    width: 100%;
+.card1 img {
     height: 100%;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
-}
-
-.card-title {
-    grid-row: 2 / 3; /* Título ocupa la segunda fila */
-    padding: 0 16px;
-    display: flex;
-    align-items: center;
-}
-
-.card-title h3 {
-    font-size: 28px;
-    margin: 0;
-}
-
-.card-description {
-    grid-row: 3 / 4; /* Descripción ocupa la tercera fila */
-    margin: 0 16px;
-    display: flex;
-    align-items: flex-start;
-    overflow-y: scroll; /* Hacer que el contenido desbordado sea desplazable verticalmente */
-    max-height: 100%; /* Asegurar que no crezca más allá del contenedor */
-}
-
-.card-description p {
-    color: #666;
-    font-size: 19px;
-    padding: 10px 0;
-    line-height: 1.1;
-}
-
-.card-btns {
-    grid-row: 4 / 5; /* Botones ocupan la cuarta fila */
-    padding: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px; /* Espacio entre los botones */
-}
-
-.card-btns .btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    background-color: #333;
-    text-decoration: none;
-    border-radius: 4px;
-    color: #ffffff;
-    flex: 1;
-    text-align: center;
-    min-width: 100px;   /* podria poner auto, si se requiere */
-}
-
-/* ************************************************************* */
-/* Texto de formulario */
-/* Estilos para centrar el formulario en el medio del contenedor */
-#section-form {
-    max-width: 100%;
-    background-image: url(/img/portada.png);
-    background-size: 100vw 100vh;
-    background-attachment: fixed;   /* para que la imagen quede fija en el fondo */
-    padding-bottom: 16px;
-}
-
-.titulo-form {
-    text-align: center;
-    font-size: 2em;
-    padding: 162px 3px 2px 3px;
-    margin: 0;
-    color: white;
-    text-shadow: #ff4081 2px 2px;
-}
-
-form {
-    max-width: 40%;
-    margin: auto;
-    background-color: rgba(9, 72, 110, 0.5);
-    padding: 20px 20px 10px 20px;
-    box-sizing: border-box;
-    margin-top: 20px;
-    margin-bottom: 200px;
-    border-radius: 5px;
-}
-
-form p {
-    color: #fff;
-    text-align: center;
-    margin: 0;
-    font-size: 1.4rem;
-    margin-bottom: 20px;
-}
-
-input.nombre,
-input.apellido {
-    text-transform: capitalize;
-}
-
-input.email {
-    text-transform: lowercase;
-}
-
-input, textarea {
     width: 100%;
-    margin-bottom: 20px;
-    padding: 8px;
-    box-sizing: border-box;
-
-    font-size: 16px;
-    /* el font-family, es mas que nada para el textarea */
-    font-family: sans-serif, 'Courier New', Courier, monospace;
-    
-    border-radius: 5px;
-    border: 1px solid rgb(168, 168, 168);
-    color: #ffffff;
-    background-color: transparent;
 }
 
-textarea {
-    min-height: 140px;
-    max-height: 140px;
-    min-width: 100%;
-    max-width: 100%;
+
+/**********************************************/
+/* *********** Seccion PASTELERIA *********** */
+.container2 {
+    width: 100vw;
+    background-color: rgb(248, 233, 246);
+    padding-top: 120px;
+    padding-bottom: 100px;
 }
 
-::placeholder {
-    color: #bea7bc;
+.card-container2 {
+    width: 90%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns:
+        repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    gap: 2.2em;
 }
 
-#boton {
-    text-align: center;  /* si el boton fuese type="button" quedaria en el centro, pero como es type="subnit" no queda en el centro */
-    color: #fff;
-    background: transparent;
-    border: 0.1px solid #15a4fa;
-    margin-bottom: 14px;
-    padding: 10px;
+.card2 {
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
+    background-color: #f0f0f0;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    overflow: hidden;
 }
 
-#boton:hover {
-    cursor: pointer;
-    color: #ffffff;
-    background-color: #15A4FA;
-    transition: 0.4s;
+.card2 img {
+    height: 100%;
+    width: 100%;
 }
+
+
+/**********************************************/
+/* *********** Seccion PELUQUERIA *********** */
+.container3 {
+    width: 100vw;
+    background-color: rgb(248, 248, 214);
+    padding-top: 120px;
+    padding-bottom: 100px;
+}
+
+.card-container3 {
+    width: 90%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns:
+        repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    gap: 2.2em;
+}
+
+.card3 {
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
+    background-color: #f0f0f0;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.card3 img {
+    height: 100%;
+    width: 100%;
+}
+
+
+
+/**********************************************/
+/* *********** Seccion UBINET SA *********** */
+.container4 {
+    width: 100vw;
+    background-color: rgb(216, 214, 248);
+    padding-top: 120px;
+    padding-bottom: 100px;
+}
+
+.card-container4 {
+    width: 90%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns:
+        repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    gap: 2.2em;
+}
+
+.card4 {
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
+    background-color: #f0f0f0;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.card4 img {
+    height: 100%;
+    width: 100%;
+}
+
+
+
+/**********************************************/
+/* *********** Seccion CUEBANITA *********** */
+.container5 {
+    width: 100vw;
+    background-color: rgb(248, 214, 217);
+    padding-top: 120px;
+    padding-bottom: 100px;
+}
+
+.card-container5 {
+    width: 90%;
+    margin: 0 auto;
+
+    display: grid;
+    grid-template-columns:
+        repeat(auto-fit, minmax(min(420px, 100%), 1fr));
+    gap: 2.2em;
+}
+
+.card5 {
+    margin: 0 auto;
+    border-radius: 8px;
+    box-shadow: 7px 7px 4px rgba(34, 34, 34, 0.6);
+    background-color: #f0f0f0;
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    overflow: hidden;
+}
+
+.card5 img {
+    height: 100%;
+    width: 100%;
+}
+
+/* 
+img {
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+}
+
+.gallery__container {
+    width: 90%;
+    max-width: 1100px;
+    margin: 40px auto;
+
+    grid-template-columns:
+        repeat(auto-fit, minmax(280px, 1fr));
+    gap: 2.2em;
+}
+
+
+.gallery__container img {
+    height: 100%;
+} */
+
+
 
 /*************************/
 /* ******* Footer ****** */
@@ -527,10 +471,6 @@ p.copying {
     nav ul li a {
         font-size: 16px;
     }
-
-    form {
-        max-width: 50%;
-    }
 }
 
 
@@ -593,10 +533,6 @@ p.copying {
         font-weight: 400;
         font-size: 38px;
     }
-
-    form {
-        max-width: 60%;
-    }
 }
 
 
@@ -622,29 +558,6 @@ p.copying {
         color: white;
         font-weight: 300;
         font-size: 30px;
-    }
-
-    p.historiamia {
-        font-size: 1.8rem;
-    }
-    
-    p.actualidad {
-        font-size: 1.7rem;
-    }
-
-    .card-description p {
-        color: #666;
-        font-size: 15px;
-        line-height: 1.1;
-    }
-
-    section h2,
-    .titulo-form {
-        font-size: 1.5em;
-    }
-
-    form {
-        max-width: 86%;
     }
 
     /* ************************** */
