--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -94,7 +94,7 @@ li a:hover:after {
     color: white;
     float: right;
     line-height: 80px;
-    margin-right: 20px;
+    margin-right: 30px;
     cursor: pointer;
     display: none;
 }
@@ -136,20 +136,22 @@ span.nombre:hover {
     height: calc(100vh - 100px);
 
     /* nuevo */
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+
+    overflow-x: hidden;
 }
 
-.img-proyectos {
+.presentacion {
     max-width: 100%;
     text-align: center;
 }
   
-.img-proyectos h1 {
-    color: #FF4081;
+.presentacion h1 {
+    color: #ed761a;
     font-size: 5.8rem;
     margin-bottom: 20px;
     text-shadow: 6px 4px #070707;
@@ -198,12 +200,14 @@ span.nombre:hover {
     justify-content: center;
 
     padding-bottom: 30px;
-    font-size: 2em;
+    /* font-size: 2em; */
+
+    font-size: clamp(20px, 1vw + 1rem, 30px);
 }
 
 .container1 {
     width: 100vw;
-    background-color: rgb(215, 243, 243);
+    background-color: #f7e1d7;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -227,6 +231,12 @@ span.nombre:hover {
     max-height: 300px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.5s;
+}
+
+.card1:hover {
+    scale: 1.1;
 }
 
 .card1 img {
@@ -239,7 +249,7 @@ span.nombre:hover {
 /* *********** Seccion PASTELERIA *********** */
 .container2 {
     width: 100vw;
-    background-color: rgb(248, 233, 246);
+    background-color: #dedbd2;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -263,6 +273,12 @@ span.nombre:hover {
     max-height: 300px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.5s;
+}
+
+.card2:hover {
+    scale: 1.1;
 }
 
 .card2 img {
@@ -275,7 +291,7 @@ span.nombre:hover {
 /* *********** Seccion PELUQUERIA *********** */
 .container3 {
     width: 100vw;
-    background-color: rgb(248, 248, 214);
+    background-color: #b0c4b1;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -299,6 +315,12 @@ span.nombre:hover {
     max-height: 300px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.5s;
+}
+
+.card3:hover {
+    scale: 1.1;
 }
 
 .card3 img {
@@ -312,7 +334,7 @@ span.nombre:hover {
 /* *********** Seccion UBINET SA *********** */
 .container4 {
     width: 100vw;
-    background-color: rgb(216, 214, 248);
+    background-color: #caf0f8;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -336,6 +358,12 @@ span.nombre:hover {
     max-height: 300px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.5s;
+}
+
+.card4:hover {
+    scale: 1.1;
 }
 
 .card4 img {
@@ -349,7 +377,7 @@ span.nombre:hover {
 /* *********** Seccion CUEBANITA *********** */
 .container5 {
     width: 100vw;
-    background-color: rgb(248, 214, 217);
+    background-color: #b8c0ff;
     padding-top: 120px;
     padding-bottom: 100px;
 }
@@ -373,6 +401,12 @@ span.nombre:hover {
     max-height: 300px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.5s;
+}
+
+.card5:hover {
+    scale: 1.1;
 }
 
 .card5 img {
@@ -528,10 +562,13 @@ p.copying {
         }
     }
     
-    .presentacion p {
-        color: white;
-        font-weight: 400;
-        font-size: 38px;
+    .ol-proyectos .li-proyectos {
+        line-height: 30px;
+    }
+
+    .ol-proyectos .li-proyectos a {
+        font-size: 1.4em;
+        text-transform: none;
     }
 }
 
