--- a/css/styles.css
+++ b/css/styles.css
@@ -298,12 +298,14 @@ section h2 {   /* todos los h2 */
     display: grid;
     grid-template-rows: 50% 10% 30% 10%;
     border-radius: 8px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.6);
+    box-shadow: 4px 4px 4px rgb(0, 0, 0, 0.6);
     background-color: #f0f0f0;
     width: 100%;
     height: 600px;
     object-fit: cover;
     overflow: hidden;
+
+    transition: 0.4s;
 }
 
 .card-img {
@@ -366,6 +368,10 @@ section h2 {   /* todos los h2 */
     flex: 1;
     text-align: center;
     min-width: 100px;   /* podria poner auto, si se requiere */
+}
+
+.card-btns .btn:hover {
+    color: #15a4fa;
 }
 
 /* ************************************************************* */
