--- a/css/proyectos.css
+++ b/css/proyectos.css
@@ -41,11 +41,16 @@ nav.abajo {
 }
 
 .main-name {
-    color: white;
+    color: #21d5fa;
     font-weight: bold; /* negrita */
     font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
+    transition: 0.5s;
+} 
+
+.main-name:hover {
+    text-shadow: 2px 2px #ffffff;
     transition: 0.5s;
 } 
 
@@ -103,7 +108,7 @@ li a:hover:after {
     display: none;
 }
 
-nav.abajo .main-name,
+/* nav.abajo .main-name, */
 nav.abajo ul li a {
     color: white;
 }
@@ -118,11 +123,13 @@ img.logo:hover {
     rotate: 360deg;
 }
 
-.main-name:hover {
-    color: #21d5fa;
-    text-shadow: 2px 2px #ffffff;
+nav.abajo .main-name {
+    color: #ffffff;
 }
 
+nav.abajo .main-name:hover {
+    text-shadow: 2px 2px #21d5fa;
+}
 
 /**********************************************/
 /* **** Zona central de la primer pagina **** */ 
