--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chewy&display=swap');
 
 * {
     padding: 0;
@@ -41,11 +41,16 @@ nav.abajo {
 }
 
 .main-name {
-    color: white;
+    color:#21d5fa;
     font-weight: bold; /* negrita */
     font-size: 18px;
     text-transform: uppercase;
     font-size: 1.6rem;
+    transition: 0.5s;
+} 
+
+.main-name:hover {
+    text-shadow: 2px 2px #ffffff;
     transition: 0.5s;
 } 
 
@@ -103,7 +108,7 @@ li a:hover:after {
     display: none;
 }
 
-nav.abajo .main-name,
+/* nav.abajo .main-name, */
 nav.abajo ul li a {
     color: white;
 }
@@ -118,11 +123,13 @@ img.logo:hover {
     rotate: 360deg;
 }
 
-.main-name:hover {
-    color: #21d5fa;
-    text-shadow: 2px 2px #ffffff;
+nav.abajo .main-name {
+    color: #ffffff;
 }
 
+nav.abajo .main-name:hover {
+    text-shadow: 2px 2px #21d5fa;
+}
 
 /**********************************************/
 /* **** Zona central de la primer pagina **** */ 
@@ -187,6 +194,8 @@ img.logo:hover {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 70%;
+    margin: 0 auto;
 }
   
 .sobremi-content img {
@@ -197,8 +206,13 @@ img.logo:hover {
 }
 
 p.historiamia {
-    font-family: "Kalam", cursive;
+    font-family: "Chewy", system-ui;
     font-weight: 400;
+    font-style: normal;
+    
+    
+    /* font-family: "Kalam", cursive;
+    font-weight: 400; */
     font-size: 2.2rem;
     color:rgba(46, 2, 95, 0.4);
     padding-bottom: 15px;
